웹 표준 게시판

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -88,7 +88,6 @@
   padding: 5px 20px 6px 20px;
   margin-top: -5px;
 }
-
 .header .header-icon {
   text-align: center;
   margin-top: 30px;
@@ -125,6 +124,13 @@
   background-position: -60px -180px;
 }
 
+/* float: left로 인한 영역깨짐(height:0) 방지법 
+1. 깨지는 영역에 똑같이 float:left를 사용한다.(X) --> 모든 박스에 float:left를 사용하게 됩니다.
+2. float의 성질을 차단하는 clear: both;를 사용한다.(X) --> 어떤 영역이 깨졌는지 찾기 어려움.
+3. float을 사용한 상위 박스한테 overflow: hidden을 사용합니다. (O) --> 현재는 제일 많이 사용.
+4. clearfix를 사용합니다. (O)
+*/
+
 /* 전체 메뉴 */
 .nav {
   overflow: hidden;
@@ -135,6 +141,9 @@
   width: 40%;
 }
 .nav > div:last-child {
+  width: 20%;
+} /* ie9부터 사용 가능 */
+.nav > div.last {
   width: 20%;
 }
 .nav > div h3 {
@@ -149,11 +158,9 @@
   float: left;
   width: 50%;
 }
-
-.nav > div:last-child ol li {
+.nav > div.last ol li {
   width: 100%;
 }
-
 .nav > div ol li a:hover {
   text-decoration: underline;
 }
@@ -190,18 +197,18 @@
   top: 60px;
   width: 43px;
   height: 43px;
+  background: #ccc;
   background: url(../img/icon.png) no-repeat -150px 0;
 }
-
 .ban a.next {
   position: absolute;
   right: -80px;
   top: 60px;
   width: 43px;
   height: 43px;
+  background: #ccc;
   background: url(../img/icon.png) no-repeat -150px -43px;
 }
-
 .ban a.prev:hover {
   background-position: -193px 0;
 }
@@ -211,24 +218,30 @@
 .ban ul {
   overflow: hidden;
 }
-
 .ban ul li {
   float: left;
   width: 330px;
 }
 .ban ul li:last-child {
   text-align: right;
-}
-
+} /* ie9부터 적용 */
 .ban ul li:nth-child(2) {
   text-align: center;
+} /* ie9부터 적용 */
+.ban ul li.ban_img1 {
+  text-align: left;
 }
-
+.ban ul li.ban_img2 {
+  text-align: center;
+}
+.ban ul li.ban_img3 {
+  text-align: right;
+}
 .ban ul li img {
   border: 4px solid #dcdcdc;
 }
 .ban ul li img:hover {
-  border-color: #98dcdc;
+  border-color: #98bcdc;
 }
 
 /* 컨텐츠 */
@@ -236,32 +249,31 @@
   overflow: hidden;
   padding-top: 30px;
 }
-
 .cont .column {
+  position: relative;
   float: left;
   width: 289px;
   height: 363px;
   margin: 0 30px 30px 0;
   padding-right: 30px;
-  position: relative;
 }
-.cont .col1 {
+.cont .column.col1 {
   border-right: 1px solid #c8c8c8;
 }
-.cont .col2 {
+.cont .column.col2 {
   border-right: 1px solid #c8c8c8;
 }
-.cont .col3 {
+.cont .column.col3 {
   margin-right: 0;
   padding-right: 0;
 }
-.cont .col4 {
+.cont .column.col4 {
   border-right: 1px solid #c8c8c8;
 }
-.cont .col5 {
+.cont .column.col5 {
   border-right: 1px solid #c8c8c8;
 }
-.cont .col6 {
+.cont .column.col6 {
   margin-right: 0;
   padding-right: 0;
 }
@@ -325,19 +337,19 @@
 }
 
 /* 게시판 */
-
 .notice {
   position: relative;
 }
 .notice h4 {
   font-size: 14px;
   color: #0093bd;
+  padding-bottom: 3px;
   font-weight: bold;
 }
 .notice ul li {
   overflow: hidden;
-  text-overflow: ellipsis; /*지정한 영역을 넘어가면 ... 으로 변경해줌*/
-  white-space: nowrap; /*두줄을 한줄로 바꿔줌*/
+  text-overflow: ellipsis;
+  white-space: nowrap;
   background: url(../img/dot.gif) no-repeat 0 8px;
   padding-left: 8px;
 }
@@ -354,36 +366,34 @@
   height: 17px;
 }
 
-/* 게시판 2 */
+/* 게시판2 */
 .notice2 {
   position: relative;
-  margin-top: 15px;
 }
 .notice2 h4 {
   font-size: 14px;
   color: #0093bd;
+  padding-bottom: 3px;
   font-weight: bold;
 }
-.notice2 ul {
-}
-.notice2 ul li {
+.notice2 li {
   overflow: hidden;
+  background: url(../img/dot.gif) no-repeat 0 8px;
+  padding-left: 8px;
 }
-.notice2 ul li a {
+.notice2 li a {
   float: left;
   width: 65%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  background: url(../img/dot.gif) no-repeat 0 8px;
-  padding-left: 8px;
 }
-.notice2 ul li span {
+.notice2 li span {
   float: right;
   width: 30%;
   text-align: right;
 }
-.notice2 .more {
+.notice2 a.more {
   position: absolute;
   right: 0;
   top: 0;
@@ -393,41 +403,41 @@
   height: 17px;
 }
 
-/* 게시판 3 */
+/* 게시판3 */
 .notice3 {
   position: relative;
 }
 .notice3 h4 {
   font-size: 14px;
   color: #0093bd;
-  font-weight: bold;
   padding-bottom: 3px;
+  font-weight: bold;
 }
-.notice3 ul li {
+.notice3 li {
   position: relative;
-  padding: 8px 0px 14px 60px;
+  padding: 8px 0 14px 60px;
 }
-.notice3 ul li a img {
+.notice3 li a img {
   width: 50px;
   position: absolute;
   left: 0;
   top: 0;
   border: 1px solid #0093bd;
 }
-.notice3 ul li a strong {
+.notice3 li a strong {
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.notice3 ul li a span {
+.notice3 li a span {
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   font-size: 12px;
 }
-.notice3 .more {
+.notice2 a.more {
   position: absolute;
   right: 0;
   top: 0;
@@ -437,38 +447,39 @@
   height: 17px;
 }
 
-/* 마우스 오버효과 */
-
+/* 마우스 오버효과1 */
 .notice_hover h4 {
   font-size: 14px;
   color: #0093bd;
-  font-weight: bold;
   padding-bottom: 3px;
+  font-weight: bold;
 }
 .notice_hover ul {
   overflow: hidden;
 }
-.notice_hover ul li {
-  width: 93px;
+.notice_hover li {
   float: left;
+  width: 93px;
   margin-right: 5px;
   text-align: center;
 }
-.notice_hover ul li:last-child {
+.notice_hover li:last-child {
   margin-right: 0;
-}
-
-.notice_hover ul li a span {
+} /* ie9부터 적용 */
+.notice_hover li.last {
+  margin-right: 0;
+} /* 모든 브라우저에 적용 */
+.notice_hover li span {
+  position: relative;
   display: block;
-  line-height: 93px;
   width: 93px;
   height: 93px;
-  position: relative;
+  line-height: 93px;
 }
-.notice_hover ul li a span img {
+.notice_hover li span img {
   width: 100%;
 }
-.notice_hover ul li a span em {
+.notice_hover li span em {
   visibility: hidden;
   position: absolute;
   left: 0;
@@ -478,52 +489,155 @@
   width: 100%;
   height: 100%;
 }
-.notice_hover ul li a span:hover em {
+.notice_hover li span:hover em {
   visibility: visible;
 }
-.notice_hover ul li a strong {
+.notice_hover li strong {
   padding-top: 3px;
   display: inline-block;
   font-size: 12px;
 }
 
-/* 마우스 오버효과 2 */
-
+/* 마우스 오버효과2 */
+.notice_hover2 {
+}
 .notice_hover2 ul {
   overflow: hidden;
 }
-.notice_hover2 ul li {
-  width: 93px;
+.notice_hover2 li {
   float: left;
-  margin-right: 5px;
+  width: 93px;
   text-align: center;
+  margin-right: 5px;
 }
-.notice_hover2 ul li:last-child {
+.notice_hover2 li.last {
   margin-right: 0;
 }
-.notice_hover2 ul li a span {
-  display: block;
+.notice_hover2 li a {
+}
+.notice_hover2 li a span {
   position: relative;
+  display: block;
   width: 93px;
   height: 93px;
 }
-.notice_hover2 ul li a span img {
+.notice_hover2 li a span img {
   width: 100%;
 }
-.notice_hover2 ul li a span em {
+.notice_hover2 li a span em {
   visibility: hidden;
   position: absolute;
-  bottom: 0;
   left: 0;
+  bottom: 0;
   width: 100%;
   background: rgba(0, 0, 0, 0.7);
   color: #fff;
 }
-.notice_hover2 ul li a span:hover em {
+.notice_hover2 li a span:hover em {
   visibility: visible;
 }
-.notice_hover2 ul li a strong {
+.notice_hover2 li a strong {
   padding-top: 3px;
   display: inline-block;
   font-size: 12px;
+}
+
+/* 콘텐츠 요소를 보이지 않게하는 방법 
+1. display: none; -- display: block; (영역이 사라짐)
+2. visibility: hidden; -- visibility: visible; (영역유지)
+3. opasity: 0; -- opasity: 1; (영역유지)
+4. width: 0; height: 0; overflow: hidden;
+*/
+
+/* 탭 메뉴 */
+.tab_menu {
+  position: relative;
+  border: 1px solid #ccc;
+  padding: 8px;
+  height: 105px;
+}
+.tab_menu ul {
+  overflow: hidden;
+  border-bottom: 1px solid #ccc;
+}
+.tab_menu ul li {
+  float: left;
+  border: 1px solid #ccc;
+  margin-right: -1px;
+  margin-bottom: -1px;
+}
+.tab_menu ul li a {
+  padding: 5px 10px;
+  display: block;
+}
+.tab_menu ul li ul {
+  position: absolute;
+  left: 0;
+  top: 48px;
+  width: 270px;
+  border: 0;
+}
+.tab_menu ul li ul li {
+  float: none;
+  border: 0;
+  background: url(../img/dot.gif) no-repeat 9px 8px;
+  padding-left: 18px;
+}
+.tab_menu ul li ul li a {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+  padding: 0 0 3px 0;
+}
+.tab_menu ul li.active {
+  background: #2c94c4;
+}
+.tab_menu ul li.active a {
+  color: #fff;
+}
+.tab_menu ul li.active ul li a {
+  color: #333;
+}
+
+/* 게시판4 */
+.notice4 {
+  position: relative;
+  border: 1px solid #ccc;
+}
+.notice4 h4 {
+  border-bottom: 1px solid #ccc;
+  font-size: 14px;
+  color: #0093bd;
+  font-weight: 700;
+  padding: 8px 10px;
+}
+.notice4 h4 em {
+  color: #cf3292;
+}
+.notice4 ul {
+  padding: 10px;
+}
+.notice4 li {
+  overflow: hidden;
+  background: url(../img/dot.gif) no-repeat 0 8px;
+  padding-left: 8px;
+  padding-bottom: 2px;
+}
+.notice4 li a {
+  float: left;
+  width: 60%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.notice4 li span {
+  float: right;
+  width: 30%;
+  text-align: right;
+}
+.notice4 a.more {
+  position: absolute;
+  right: 9px;
+  top: 9px;
 }
