전체메뉴 스크립트

--- a/web/css/reset.css
+++ b/web/css/reset.css
@@ -54,7 +54,8 @@ table {
 }
 
 /* 폰트 스타일 초기화 */
-em {
+em,
+address {
   font-style: normal;
 }
 
@@ -135,4 +136,15 @@ h6 {
 }
 .mt50 {
   margin-top: 50px !important;
+}
+
+/* 테두리 초기화 */
+img,
+fieldset {
+  border: 0 none;
+}
+
+/* 버튼 초기화 */
+button {
+  border: 0 none;
 }
